themes/alpha/static/css/utilities.css
/* Page container to set left and right boundaries */
.container {
  margin-inline: auto;
  max-width: 72rem;
  @media (width < 40rem) {
    padding-inline: 1rem;
  }
  padding-inline: 2rem;
}

/* Add spacing flexibly between elements */
.flow > *:where(:not(:first-child)) {
  margin-block-start: var(--flow-space, 1rem);
  /* source 3 */
}

/* Prose text */
.prose {
  max-width: 40rem;
}

/* Colors */
.text-black { color: var(--clr-black); }
.text-white { color: var(--clr-white); }
.text-tan { color: var(--clr-tan); }
.text-orange { color: var(--clr-orange); }
.text-blue { color: var(--clr-blue); }
.text-rust { color: var(--clr-rust); }
.bg-black { background-color: var(--clr-black); }
.bg-white { background-color: var(--clr-white); }
.bg-tan { background-color: var(--clr-tan); }
.bg-orange { background-color: var(--clr-orange); }
.bg-blue { background-color: var(--clr-blue); }
.bg-rust { background-color: var(--clr-rust); }

/* Font families */
.ff-poppins { font-family: var(--ff-poppins); }
.ff-poppins-medium { font-family: var(--ff-poppins-medium); }
.ff-poppins-bold { font-family: var(--ff-poppins-bold); }
.ff-space-mono-regular { font-family: var(--ff-space-mono-regular); }
.ff-space-mono-bold { font-family: var(--ff-space-mono-bold); }
.ff-space-mono-italic { font-family: var(--ff-space-mono-italic); }
.ff-space-mono-bold-italic { font-family: var(--ff-space-mono-bold-italic); }

.letter-spacing-1 { letter-spacing: 4.75px; }
.letter-spacing-2 { letter-spacing: 2.7px; }
.letter-spacing-3 { letter-spacing: 2.35px; }

.uppercase { text-transform: uppercase; }

/* Font sizes */
.fs-9 { font-size: var(--step-9); }
.fs-8 { font-size: var(--step-8); }
.fs-7 { font-size: var(--step-7); }
.fs-6 { font-size: var(--step-6); }
.fs-5 { font-size: var(--step-5); }
.fs-4 { font-size: var(--step-4); }
.fs-3 { font-size: var(--step-3); }
.fs-2 { font-size: var(--step-2); }
.fs-1 { font-size: var(--step-1); }

.fs-9,
.fs-8,
.fs-7,
.fs-6 {
  line-height: 1.1;
}

/* Apply a flexbox to this element */
.flex {
  display: flex;
  gap: var(--gap, 1rem);
  &.direction-row { flex-direction: row; }
  &.direction-column { flex-direction: column; }
  .grow-1 { flex-grow: 1; }
  .grow-0 { flex-grow: 0; }
}

/* Set the gap */
.gap-0 { gap: 0rem; }
.gap-1 { gap: 1rem; }
.gap-2 { gap: 2rem; }
.gap-3 { gap: 3rem; }

/* Apply a grid to this element */
.grid {
  display: grid;
  gap: var(--gap, 1rem);
  &.place-content-center {
    place-content: center;
  }
  /* Create an automatically responsive grid with minimum item size */
  &.auto {
    grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size, 16rem), 1fr));
  }
  /* Columns in landscape */
  @media (orientation: landscape) {
    &.columns-1-landscape {
      grid-template-columns: repeat(1, auto);
    }
    &.columns-2-landscape {
      grid-template-columns: repeat(2, auto);
    }
    &.columns-3-landscape {
      grid-template-columns: repeat(3, auto);
    }
  }
  /* Columns in portrait */
  @media (orientation: portrait) {
    &.columns-1-portrait {
      grid-template-columns: 1fr;
    }
  }
}

/* Pass content to screen readers only */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}

